# algorithmic-trading-server

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: test.yml
docs/: ARCHITECTURE.md  DEPLOYMENT.md  MODELS.md  STRATEGIES.md
infra/docker/: entrypoint.sh
server/: __init__.py
server/api/: app.py  backtest.py
server/bot/: logging_setup.py  main.py  state_store.py
server/config/: accounts.py  production.json
server/engine/: __init__.py  live_engine.py
server/exchange/: __init__.py  client.py
server/models/: __init__.py
server/strategies/: __init__.py  common.py
server/strategies/active/: macd_crossover.py  rsi_meanreversion.py
server/tests/: conftest.py  test_api.py  test_imports.py  test_state_store.py  test_strategies.py  test_tick_order.py
