[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "algorithmic-trading-server"
version = "0.1.0"
description = "High-frequency algorithmic trading server — FastAPI + Python"
requires-python = ">=3.11"
dependencies = [
    "ccxt>=4.4.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pandas>=2.2.0",
    "pandas-ta==0.4.71b0",
    "numpy>=2.2.6",
    "TA-Lib>=0.6.4",
    "python-dotenv>=1.0.0",
    "requests>=2.32.0",
    "boto3>=1.34.0",
    "pydantic>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.5",
]

[project.scripts]
trading-bot = "server.bot.main:TradingBot.run"

[tool.setuptools.packages.find]
include = ["server*"]

[tool.setuptools.package-data]
"server.config" = ["*.json"]
"server.models" = ["*.npz", "*.json"]

[tool.pytest.ini_options]
testpaths = ["server/tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
ignore = [
    "E501",
    "E701",
    "E702",
    "E741",
]

[tool.ruff.lint.per-file-ignores]
"server/__init__.py" = ["F401"]
"server/*/__init__.py" = ["F401"]
"server/strategies/*" = ["F401", "E731", "E712", "F841"]
"server/strategies/**/*" = ["F401", "E731", "E712", "F841"]
"server/engine/*" = ["F401", "E712", "E711"]
"server/api/*" = ["F401"]
"server/bot/*" = ["F401"]
"server/tests/*" = ["F401"]
